src/test/ui/traits/trait-alias/trait-alias-wf.stderr
error[E0277]: the trait bound `T: Foo` is not satisfied
  --> $DIR/trait-alias-wf.rs:5:1
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL | trait B<T> = A<T>;
   | ^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `T`
   |
   = help: consider adding a `where T: Foo` bound
note: required by `A`
  --> $DIR/trait-alias-wf.rs:4:1
   |
LL | trait A<T: Foo> {}
   | ^^^^^^^^^^^^^^^
=======
LL | trait A<T: Foo> {}
   | --------------- required by `A`
LL | trait B<T> = A<T>;
   | ^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `T`
   |
   = help: consider adding a `where T: Foo` bound
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
